--- a/front/src/template/index.template.html
+++ b/front/src/template/index.template.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <title>{{ title }}</title>
     <meta charset="utf-8">
@@ -10,14 +10,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
     <link rel="shortcut icon" sizes="48x48" href="/public/logo-48.png">
     <meta name="theme-color" content="#f60">
+    <link rel="dns-prefetch" href="">
+    <link rel="dns-preconnect" href="">
+    <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
     <link rel="manifest" href="../manifest.json">
-    <style>
-      #skip a {  position:absolute;  left:-10000px;  top:auto;  width:1px;  height:1px;  overflow:hidden;  }
-      #skip a:focus {  position:static;  width:auto;  height:auto;  }
-    </style>
   </head>
   <body>
-  <div id="skip"><a href="#app">skip to content</a></div>
   <!--vue-ssr-outlet-->
   </body>
 </html>
